--- a/src/Media.css
+++ b/src/Media.css
@@ -1,3 +1,10 @@
+.instagram_home {
+  display: 'flex';
+  flex-direction: column;
+  align-items:  center;
+  justify-content: center
+}
+
 .instagram-media {
     display: flex;
     flex-wrap: wrap;
